fix: firefox overflow not working property on edit candidate's components

--- a/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-employment/edit-candidate-employment.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-employment/edit-candidate-employment.component.scss
@@ -12,7 +12,7 @@
   font-weight: 700;
 }
 :host {
-  overflow-y: overlay;
+  overflow-y: auto;
   max-height: calc(100vh - 28rem);
   nb-card {
     background-color: rgba(50, 50, 50, 0.03);
